More on Feature Request #3129960
Refining Makefiles more

--- a/openhpi/trunk/marshal/Makefile.am
+++ b/openhpi/trunk/marshal/Makefile.am
@@ -39,7 +39,8 @@ libopenhpimarshal_la_SOURCES    = \
     marshal.h
 
 # we need glib-2.0 for gmalloc
-libopenhpimarshal_la_LDFLAGS= -version-info @HPI_LIB_VERSION@ @GLIB_ONLY_LIBS@
+libopenhpimarshal_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
+libopenhpimarshal_la_LIBADD  = @GLIB_ONLY_LIBS@
 
 clean-local:
 	rm -f *~ core core.*
