--- a/openhpi/trunk/plugins/slave/Makefile.am
+++ b/openhpi/trunk/plugins/slave/Makefile.am
@@ -33,5 +33,6 @@ libslave_la_SOURCES = baselib.cpp \
                       util.cpp \
                       util.h
 
-libslave_la_LDFLAGS = -module -version-info @HPI_LIB_VERSION@ @GMODULE_ONLY_LIBS@
+libslave_la_LDFLAGS = -module -version-info @HPI_LIB_VERSION@
+libslave_la_LIBADD  = @GMODULE_ONLY_LIBS@
 
