More on Feature Request #3031797

--- a/openhpi/trunk/Makefile.mingw32
+++ b/openhpi/trunk/Makefile.mingw32
@@ -6,7 +6,8 @@ openhpi_libs := utils \
                 marshal \
                 baselib \
                 clients
-#                openhpid
+ #               openhpid \
+ #               plugins/slave
 
 .PHONY: all clean $(openhpi_libs)
 
@@ -25,6 +26,7 @@ clean:
 out: all
 	rm -rf ${out}
 	mkdir -p ${out}
+#	mkdir -p ${out}/plugins
 	cp README.windows ${out}
 	cat include/SaHpi.h | sed -e 's/ __attribute__.*/;/' -e 's/#define SAHPI_API/#define SAHPI_API __declspec(dllimport)/' > ${out}/SaHpi.h
 	cp include/oHpi.h ${out}
@@ -37,4 +39,6 @@ out: all
 	cp baselib/libopenhpi-${VERSION}.a ${out}/
 	cp baselib/libopenhpi-${VERSION}.def ${out}/
 	cp clients/*.exe ${out}/
+#	cp openhpid/openhpid.exe ${out}/
+#	cp plugins/slave/libslave.dll ${out}/plugins
 
