More on Feature Request #3129960
oh_event and oh_event helpers moved to utils
include/oh_event.h -> utils/event_utils.h
slave: added missed slave.h
slave: fixed debug output about created domain

--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -38,6 +38,7 @@ libopenhpidaemon_la_SOURCES        = \
     conf.h \
     domain.c \
     event.c \
+    event.h \
     hotswap.c \
     hotswap.h \
     init.c \
