--- a/openhpi/trunk/clients/Makefile.am
+++ b/openhpi/trunk/clients/Makefile.am
@@ -7,9 +7,7 @@ INCLUDES             = @OPENHPI_INCLUDES@
 
 EXTRA_DIST       = Makefile.mingw32
 
-COMMONLIBS 	     = @STATIC_PLUGIN_LIBS@ @STATIC_PLUGIN_EXTRA_LIBS@
-
-COMMONLIBS	     += $(top_builddir)/baselib/libopenhpi.la
+COMMONLIBS	     = $(top_builddir)/baselib/libopenhpi.la
 
 CLIENTS_SRC 	     = clients.c oh_clients.h
 
