--- a/openhpi/trunk/plugins/slave/Makefile.am
+++ b/openhpi/trunk/plugins/slave/Makefile.am
@@ -19,6 +19,8 @@ AM_CPPFLAGS = -DG_LOG_DOMAIN=\"slave\"
 
 INCLUDES = @OPENHPI_INCLUDES@
 
+EXTRA_DIST = Makefile.mingw32
+
 pkglib_LTLIBRARIES = libslave.la
 
 libslave_la_SOURCES = baselib.cpp \
