--- a/openhpi/trunk/clients/Makefile.am
+++ b/openhpi/trunk/clients/Makefile.am
@@ -5,6 +5,9 @@ AM_CPPFLAGS = -DG_LOG_DOMAIN=\"client\"
 
 INCLUDES             = @OPENHPI_INCLUDES@
 
+SUBDIRS = hpixml
+DIST_SUBDIRS = hpixml
+
 EXTRA_DIST       = Makefile.mingw32
 
 COMMONLIBS	     = $(top_builddir)/baselib/libopenhpi.la
