--- a/openhpi/trunk/baselib/Makefile.mingw32
+++ b/openhpi/trunk/baselib/Makefile.mingw32
@@ -1,6 +1,6 @@
 include ../Makefile.mingw32.def
 
-TARGET := libopenhpi-${VERSION}.dll
+TARGET := libopenhpi.dll
 
 SRC := conf.c \
        init.cpp \
@@ -18,9 +18,9 @@ INCLUDES := ${GLIB_INCLUDES}
 INCLUDES += -I ../mingw32 -I ../include -I ../utils -I ../transport -I ../marshal
 
 LIBS := ${GLIB_LIBS} ${GTHREAD_LIBS}
-LIBS += -L ../utils -lopenhpiutils-${VERSION}
-LIBS += -L ../transport -lopenhpitransport-${VERSION}
-LIBS += -L ../marshal -lopenhpimarshal-${VERSION}
+LIBS += -L ../utils -lopenhpiutils
+LIBS += -L ../transport -lopenhpitransport
+LIBS += -L ../marshal -lopenhpimarshal
 
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
