--- a/openhpi/trunk/transport/Makefile.mingw32
+++ b/openhpi/trunk/transport/Makefile.mingw32
@@ -1,6 +1,6 @@
 include ../Makefile.mingw32.def
 
-TARGET := libopenhpitransport-${VERSION}.dll
+TARGET := libopenhpitransport.dll
 
 SRC := strmsock.cpp
 
