--- a/openhpi/trunk/clients/Makefile.mingw32
+++ b/openhpi/trunk/clients/Makefile.mingw32
@@ -28,8 +28,8 @@ DEFS += -DSAHPI_API="__declspec(dllimport)"
 INCLUDES := ${GLIB_INCLUDES} -I ../mingw32 -I ../include -I ../utils
 
 LIBS := ${GLIB_LIBS}
-LIBS += -L ../baselib -lopenhpi-${VERSION}
-LIBS += -L ../utils -lopenhpiutils-${VERSION}
+LIBS += -L ../baselib -lopenhpi
+LIBS += -L ../utils -lopenhpiutils
 
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
@@ -37,9 +37,12 @@ CPPFLAGS += ${DEFS} ${INCLUDES}
 
 all : ${TARGETS}
 
-%.exe : %.o clients.o
+manifest.o: manifest.rc
+	${RC} -i $^ -o $@
+
+%.exe : %.o clients.o manifest.o
 	${CXX} -o $@ $^ ${LIBS} 
 
 clean:
-	rm -f ${OBJS} ${TARGETS}
+	rm -f ${OBJS} ${TARGETS} manifest.o clients.o
 
