--- a/openhpi/trunk/configure.ac
+++ b/openhpi/trunk/configure.ac
@@ -629,7 +629,7 @@ AM_CONDITIONAL(HAVE_OPENSSL, test x$have_openssl = xyes)
 OH_SSL_INCLUDES="-I\$(top_srcdir)/ssl"
 AC_SUBST(OH_SSL_INCLUDES)
 
-OPENHPI_INCLUDES="-I\$(top_srcdir)/include -I\$(top_srcdir)/utils -I\$(top_builddir)/utils"
+OPENHPI_INCLUDES="-I\$(top_srcdir)/include -I\$(top_srcdir)/utils -I\$(top_builddir)/utils -I\$(top_srcdir)/clients"
 dnl replace common includes here
 AC_SUBST(OPENHPI_INCLUDES)
 
