--- a/openhpi/trunk/clients/hpixml/Makefile.mingw32
+++ b/openhpi/trunk/clients/hpixml/Makefile.mingw32
@@ -3,19 +3,19 @@ include ../../Makefile.mingw32.def
 TARGET := hpixml.exe
 
 SRC := \
+    ../clients.c \
     hpi.cpp \
     hpi_xml_writer.cpp \
     schema.S \
     main.cpp \
-    manifest.rc \
     xml_writer.cpp
 
-OBJ := $(patsubst %.rc, %.o, $(patsubst %.S, %.o, $(patsubst %.cpp, %.o, ${SRC} ) ) )
+OBJ := $(patsubst %.S, %.o,$(patsubst %.c, %.o, $(patsubst %.cpp, %.o, ${SRC} ) ) )
 
 DEFS := -DG_LOG_DOMAIN=\"hpixml\" -DSCHEMA=\"schema.xsd\"
 
 INCLUDES := ${GLIB_INCLUDES}
-INCLUDES +=  -I ../../mingw32 -I ../../include -I ../../utils
+INCLUDES +=  -I ../../mingw32 -I ../../include -I ../../utils -I ../
 
 LIBS := ${GLIB_LIBS}
 LIBS += -L ../../utils -lopenhpiutils
@@ -26,9 +26,6 @@ CPPFLAGS += ${DEFS} ${INCLUDES}
 .PHONY: all clean
 
 all : ${TARGET}
-
-manifest.o: manifest.rc
-	${RC} -i $^ -o $@
 
 ${TARGET} : ${OBJ}
 	${CXX} -o $@ $^ ${LIBS}
