--- a/openhpi/trunk/Makefile.mingw32
+++ b/openhpi/trunk/Makefile.mingw32
@@ -1,11 +1,13 @@
 include Makefile.mingw32.def
 
-out     := openhpi-${VERSION}-win32
-doc     := ${out}/doc
-libs    := ${out}/openhpi.windows.libraries
-devel   := ${out}/devel
+out     := openhpi-${VERSION}-win32-${ARCH}
+doc     := ${out}
+deps    := ${out}
+libs    := ${out}
+devel   := ${out}
 progs   := ${out}
-plugins := ${out}/openhpi.windows.plugins
+plugins := ${out}
+conf    := ${out}
 
 openhpi_libs := utils \
                 transport \
@@ -35,15 +37,15 @@ out: all
 	mkdir -p ${out}
 	mkdir -p ${doc}
 	cp README.windows ${doc}/README.windows.txt
+	mkdir -p ${deps}
+	cp ${GLIB_DIR}/bin/libglib-2.0-0.dll ${deps}
+	cp ${GLIB_DIR}/bin/libgmodule-2.0-0.dll ${deps}
+	cp ${GLIB_DIR}/bin/libgthread-2.0-0.dll ${deps}
 	mkdir -p ${libs}
 	cp transport/libopenhpitransport.dll ${libs}
 	cp marshal/libopenhpimarshal.dll ${libs}
 	cp utils/libopenhpiutils.dll ${libs}
 	cp baselib/libopenhpi.dll ${libs}
-	cp ${GLIB_DIR}/bin/libglib-2.0-0.dll ${libs}
-	cp ${GLIB_DIR}/bin/libgmodule-2.0-0.dll ${libs}
-	cp ${GLIB_DIR}/bin/libgthread-2.0-0.dll ${libs}
-	cp mingw32/openhpi.windows.libraries.manifest ${libs}
 	mkdir -p ${devel}
 	cat include/SaHpi.h | sed -e 's/ __attribute__.*/;/' -e 's/#define SAHPI_API/#define SAHPI_API __declspec(dllimport)/' > ${devel}/SaHpi.h
 	cp include/oHpi.h ${devel}
@@ -51,12 +53,12 @@ out: all
 	cp utils/libopenhpiutils.def ${devel}
 	cp baselib/libopenhpi.a ${devel}
 	cp baselib/libopenhpi.def ${devel}
-	cp mingw32/app.manifest ${devel}
 	mkdir -p ${progs}
 	cp clients/*.exe ${progs}
 	cp clients/hpixml/hpixml.exe ${progs}
 	cp openhpid/openhpid.exe ${progs}
 	mkdir -p ${plugins}
 	cp plugins/slave/libslave.dll ${plugins}
-	cp mingw32/openhpi.windows.plugins.manifest ${plugins}
+	mkdir -p ${conf}
+	cp mingw32/openhpi.conf.example ${conf}/openhpi.conf
 
