--- a/openhpi/trunk/plugins/dynamic_simulator/Makefile.am
+++ b/openhpi/trunk/plugins/dynamic_simulator/Makefile.am
@@ -37,6 +37,11 @@ INCLUDES                = @OPENHPI_INCLUDES@
 
 pkglib_LTLIBRARIES      = libdyn_simulator.la
 
+EXTRA_DIST = \
+             doc.html.tgz \
+             Doxyfile \
+             README
+             
 libdyn_simulator_la_SOURCES= \
 		array.h \
 		new_sim.h \
