Some for bug #3289939

--- a/openhpi/trunk/openhpi.conf.example
+++ b/openhpi/trunk/openhpi.conf.example
@@ -20,7 +20,7 @@ OPENHPI_UNCONFIGURED = "YES"
 #OPENHPI_PATH = "/usr/local/lib/openhpi:/usr/lib/openhpi"
 #OPENHPI_VARPATH = "/usr/local/var/lib/openhpi"
 #OPENHPI_AUTOINSERT_TIMEOUT = 0
-#OPENHPI_AUTOINSERT_TIMEOUT_READONLY = "NO"
+#OPENHPI_AUTOINSERT_TIMEOUT_READONLY = "YES"
 
 
 ## The default values for each have been selected in the example above (except
