--- a/openhpi/trunk/marshal/Makefile.mingw32
+++ b/openhpi/trunk/marshal/Makefile.mingw32
@@ -4,9 +4,10 @@ TARGET := libopenhpimarshal.dll
 
 SRC := marshal.c \
        marshal_hpi.c \
-       marshal_hpi_types.c
+       marshal_hpi_types.c \
+       version.rc
 
-OBJ := $(patsubst %.c, %.o, ${SRC})
+OBJ := $(patsubst %.rc, %.o, $(patsubst %.c, %.o, ${SRC}))
 
 DEFS := -DG_LOG_DOMAIN=\"marshal\"
 
@@ -17,11 +18,15 @@ LIBS := ${GLIB_LIBS}
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
 .PHONY: all clean
+.SUFFIXES: .rc
 
 all : ${TARGET}
 
 ${TARGET} : ${OBJ}
 	${CC} -shared -o $@ $^ ${LIBS}
+
+.rc.o:
+	${RC} ${RCFLAGS} $< $@
 
 clean:
 	rm -f ${OBJ} ${TARGET}
