--- a/openhpi/trunk/clients/Makefile.mingw32
+++ b/openhpi/trunk/clients/Makefile.mingw32
@@ -20,7 +20,7 @@ TARGETS := hpialarms.exe \
            ohhandler.exe \
            ohparam.exe
 
-OBJS := $(patsubst %.exe, %.o, ${TARGETS}) clients.o
+OBJS := $(patsubst %.exe, %.o, ${TARGETS}) clients.o version.o
 
 DEFS := -DG_LOG_DOMAIN=\"client\"
 DEFS += -DSAHPI_API="__declspec(dllimport)"
@@ -34,11 +34,15 @@ LIBS += -L ../utils -lopenhpiutils
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
 .PHONY: all clean
+.SUFFIXES: .rc
 
 all : ${TARGETS}
 
-%.exe : %.o clients.o
+%.exe : %.o clients.o version.o
 	${CXX} -o $@ $^ ${LIBS} 
+
+.rc.o:
+	${RC} ${RCFLAGS} $< $@
 
 clean:
 	rm -f ${OBJS} ${TARGETS} clients.o
