--- a/openhpi/trunk/clients/hpixml/Makefile.mingw32
+++ b/openhpi/trunk/clients/hpixml/Makefile.mingw32
@@ -6,11 +6,12 @@ SRC := \
     ../clients.c \
     hpi.cpp \
     hpi_xml_writer.cpp \
-    schema.S \
     main.cpp \
+    schema.S \
+    version.rc \
     xml_writer.cpp
 
-OBJ := $(patsubst %.S, %.o,$(patsubst %.c, %.o, $(patsubst %.cpp, %.o, ${SRC} ) ) )
+OBJ := $(patsubst %.rc, %.o, $(patsubst %.S, %.o,$(patsubst %.c, %.o, $(patsubst %.cpp, %.o, ${SRC}))))
 
 DEFS := -DG_LOG_DOMAIN=\"hpixml\" -DSCHEMA=\"schema.xsd\"
 
@@ -24,11 +25,15 @@ LIBS += -L ../../baselib -lopenhpi
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
 .PHONY: all clean
+.SUFFIXES: .rc
 
 all : ${TARGET}
 
 ${TARGET} : ${OBJ}
 	${CXX} -o $@ $^ ${LIBS}
+
+.rc.o:
+	${RC} ${RCFLAGS} $< $@
 
 clean:
 	rm -f ${OBJ} ${TARGET}
