--- a/openhpi/trunk/plugins/slave/Makefile.mingw32
+++ b/openhpi/trunk/plugins/slave/Makefile.mingw32
@@ -6,9 +6,10 @@ SRC := baselib.cpp \
        handler.cpp \
        resourcemap.cpp \
        slave.cpp \
-       util.cpp
+       util.cpp \
+       version.rc
 
-OBJ := $(patsubst %.cpp, %.o, ${SRC})
+OBJ := $(patsubst %.rc, %.o, $(patsubst %.cpp, %.o, ${SRC}))
 
 DEFS := -DG_LOG_DOMAIN=\"slave\"
 
@@ -20,11 +21,15 @@ LIBS += -L ../../utils -lopenhpiutils
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
 .PHONY: all clean
+.SUFFIXES: .rc
 
 all : ${TARGET}
 
 ${TARGET} : ${OBJ}
 	${CXX} -shared -o $@ $^ ${LIBS}
+
+.rc.o:
+	${RC} ${RCFLAGS} $< $@
 
 clean:
 	rm -f ${OBJ} ${TARGET}
