--- a/openhpi/trunk/transport/Makefile.mingw32
+++ b/openhpi/trunk/transport/Makefile.mingw32
@@ -2,9 +2,9 @@ include ../Makefile.mingw32.def
 
 TARGET := libopenhpitransport.dll
 
-SRC := strmsock.cpp
+SRC := strmsock.cpp version.rc
 
-OBJ := $(patsubst %.cpp, %.o, ${SRC})
+OBJ := $(patsubst %.rc, %.o, $(patsubst %.cpp, %.o, ${SRC}))
 
 DEFS :=  -DG_LOG_DOMAIN=\"transport\"
 
@@ -15,11 +15,15 @@ LIBS := ${GLIB_LIBS} -lws2_32
 CPPFLAGS += ${DEFS} ${INCLUDES}
 
 .PHONY: all clean
+.SUFFIXES: .rc
 
 all : ${TARGET}
 
 ${TARGET} : ${OBJ}
 	${CXX} -shared -o $@ $^ ${LIBS}
+
+.rc.o:
+	${RC} ${RCFLAGS} $< $@
 
 clean:
 	rm -f ${OBJ} ${TARGET}
