--- a/openhpi/trunk/baselib/version.rc
+++ b/openhpi/trunk/baselib/version.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",  "OpenHPI Base Library (SAI-HPI-B.03.02 compliant)"
             VALUE "FileVersion",      VERSION
             VALUE "InternalName",     "libopenhpi"
-            VALUE "LegalCopyright",   "OpenHPI is distrubuted under BSD license"
+            VALUE "LegalCopyright",   "OpenHPI is distributed under BSD license"
             VALUE "OriginalFilename", "libopenhpi.dll"
             VALUE "ProductName",      "OpenHPI"
             VALUE "ProductVersion",   VERSION
