--- a/openhpi/trunk/clients/hpixml/version.rc
+++ b/openhpi/trunk/clients/hpixml/version.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",  "OpenHPI XML Client"
             VALUE "FileVersion",      VERSION
             VALUE "InternalName",     "hpixml"
-            VALUE "LegalCopyright",   "OpenHPI is distrubuted under BSD license"
+            VALUE "LegalCopyright",   "OpenHPI is distributed under BSD license"
             VALUE "OriginalFilename", "hpixml.exe"
             VALUE "ProductName",      "OpenHPI"
             VALUE "ProductVersion",   VERSION
