--- a/openhpi/trunk/clients/version.rc
+++ b/openhpi/trunk/clients/version.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",  "OpenHPI Client"
             VALUE "FileVersion",      VERSION
             VALUE "InternalName",     ""
-            VALUE "LegalCopyright",   "OpenHPI is distrubuted under BSD license"
+            VALUE "LegalCopyright",   "OpenHPI is distributed under BSD license"
             VALUE "OriginalFilename", ""
             VALUE "ProductName",      "OpenHPI"
             VALUE "ProductVersion",   VERSION
