--- a/openhpi/trunk/openhpid/version.rc
+++ b/openhpi/trunk/openhpid/version.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",  "OpenHPI Daemon"
             VALUE "FileVersion",      VERSION
             VALUE "InternalName",     "openhpid"
-            VALUE "LegalCopyright",   "OpenHPI is distrubuted under BSD license"
+            VALUE "LegalCopyright",   "OpenHPI is distributed under BSD license"
             VALUE "OriginalFilename", "openhpid.exe"
             VALUE "ProductName",      "OpenHPI"
             VALUE "ProductVersion",   VERSION
