--- a/openhpi/trunk/plugins/slave/version.rc
+++ b/openhpi/trunk/plugins/slave/version.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",  "OpenHPI Slave Plug-in"
             VALUE "FileVersion",      VERSION
             VALUE "InternalName",     "libslave"
-            VALUE "LegalCopyright",   "OpenHPI is distrubuted under BSD license"
+            VALUE "LegalCopyright",   "OpenHPI is distributed under BSD license"
             VALUE "OriginalFilename", "libslave.dll"
             VALUE "ProductName",      "OpenHPI"
             VALUE "ProductVersion",   VERSION
